fix: dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
 }
 
 @media (prefers-color-scheme: dark) {
-    .phrase {
+    body, main, .phrases > button, .probable-improbable-word {
         color: #fff;
     }
 }
